Migrated all top-level pages to new reclinathon homepage style Wrapped rtt into an iframe to avoid css conflicts - still doesn't display quite right

--- a/css/index_new.css
+++ b/css/index_new.css
@@ -19,6 +19,8 @@ div.divider
   width: 100%;
   height: 3px;
   background-image:url('../images/nav_underline.png');
+  background-repeat: repeat-x;
+  background-color: #222222;
 }
 
 div.main
@@ -26,6 +28,12 @@ div.main
   width: 100%;
   height: 599px;
   background-image:url('../images/gradient.png');
+  background-repeat: repeat-x
+}
+
+div.content
+{
+  width: 700px;
 }
 
 a:link
